<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/open_file"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/open_file"/>
        <item
            android:id="@+id/export_file"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/upload_file"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/set_pe_state"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/set_pe_state"/>
        <item
            android:id="@+id/ensure"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/ensure"/>
        <item
            android:id="@+id/ensure_mannally"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/ensure_mannally"/>
        <item
            android:id="@+id/export_detection"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/export_detection"/>
        <item
            android:id="@+id/analyze"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/analyze"/>
        <item
            android:id="@+id/export_upload"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/export_upload"/>
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/logs"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/logs"/>
        <item
            android:id="@+id/helps"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/helps"/>
    </group>
</menu>